# geant4tomosim

./: .gitignore  BaseArraySave.txt  CMakeLists.txt  Geometry.mac  MyVis.mac  README.md  README.txt  SpeedTest.cc  ViewImages.py  commands  init_vis.mac  main.cc  mpi_recipe.sh  settings.mac  start.in  submission_script.sh  vis.mac
Data_Output/Text/: SimulationSettings.txt
Output/HDF5/: SimulationLog.txt
Output/Text/: OutputLog.txt  SimulationLog.txt  SimulationSettings.txt
Output/Text/HitData/: Image1.txt  Image2.txt  Image3.txt  Image4.txt  Image5.txt  Image6.txt
Output/Visualization/: SimulatedData_vis0.heprep  X-RayData0.heprep
cmake/: FindNumpy.cmake  ReplicatePythonSourceTree.cmake  UseCython.cmake
conda/: build.sh  meta.yaml
include/: AbsorptionDetector.hh  AbsorptionDetectorMessenger.hh  AbsorptionSD.hh  ActionInitialization.hh  Analysis.hh  Boolean_Sample.hh  CommandStatus.hh  Cube.hh  CustomObject.hh  Data.hh  DataMessenger.hh  DefineMaterials.hh  DefineMaterialsMessenger.hh  DetectorConstruction.hh  DetectorConstructionMessenger.hh  DiffractionDetector.hh  DiffractionSD.hh  EventAction.hh  Exceptions.hh  FluorescenceDetector.hh  FluorescenceDetectorMessenger.hh  FluorescenceSD.hh  GammaOpticalAbsorption.hh  GammaOpticalRefraction.hh  GenericMessenger.hh  GlobalClasses.hh  Input.hh  InputMessenger.hh  MainMessenger.hh  MaterialsProperties.hh  MultiParameters.hh  MyG4UImessenger.hh  MyVectors.hh  ParticleBeam.hh  PhysicsList.hh  PhysicsListMessenger.hh  PlacementTest.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorActionMessenger.hh  PrintLines.hh  (+26 more)
scripts/: Beam.mac  Geometry.mac  Materials.mac  MyVis.mac  Settings.mac  pySettings.mac  settings.mac
settings/: beam.mac  detectors.mac  materials.mac  physics.mac  sampleGeometry.mac  samplePlacement.mac  tomosim_input.py  units.py
settings/samples/: Al_Ni_block.mac  cube.mac  objectA.mac  objectA_objectB.mac  objectB.mac
src/: AbsorptionDetector.cc  AbsorptionDetectorMessenger.cc  AbsorptionSD.cc  ActionInitialization.cc  Boolean_Sample.cc  CMakeLists.txt  Cube.cc  Data.cc  DataMessenger.cc  DefineMaterials.cc  DefineMaterialsMessenger.cc  DetectorConstruction.cc  DetectorConstructorMessenger.cc  DiffractionDetector.cc  DiffractionSD.cc  EventAction.cc  FluorescenceDetector.cc  FluorescenceDetectorMessenger.cc  FluorescenceSD.cc  G4Units.py  Input.cc  InputMessenger.cc  MultiParameters.cc  MyG4UImessenger.cc  NexusFormatter.py  ParticleBeam.cc  PhysicsList.cc  PhysicsListMessenger.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorActionMessenger.cc  PrintLines.cc  ProgressTracker.cc  RunAction.cc  RunActionMessenger.cc  SampleConstruction.cc  SampleConstructionMessenger.cc  SampleDescription.cc  Simulation.cc  SimulationMessenger.cc  StackingAction.cc  (+14 more)
